
Table account as A {
  id bigserial [pk]
  owner varchar
  balance bigint
  currency varchar
  created_at timestampz [default: `now()`]

  indexes {
    owner
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id]
  amount bigint
  created_at timestampz [default: `now()`]

  indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id]
  to_account_id bigint [ref: > A.id]
  amount bigint
  created_at timestampz [default: `now()`]

  indexes {
    from_account_id
    to_account_id
    (from_account_id,to_account_id)
  }
}


